<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Rockchip Android MID Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="60dip"
    android:background="@drawable/menu_bg"
    android:scaleType="fitXY"
    android:id="@+id/win_error_info"
    android:gravity="center"
    android:focusable="false"
    android:orientation="vertical">

	<LinearLayout android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:id="@+id/win_title">
			<ImageView android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:background="@drawable/error_info" 
				android:id="@+id/error_image"/>
			<TextView  android:id="@+id/error_title" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dip" 
				android:textSize="@dimen/default_text_size_middle" 
				android:text="@string/video_error_dialog_title"
				android:textColor="@color/white"			
				android:layout_gravity="center"
				/>
    </LinearLayout>	
	<LinearLayout android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="30dip" 
		android:id="@+id/win_content_error">
			<TextView  android:id="@+id/error_content" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:textSize="@dimen/default_text_size_middle"
				android:text="@string/video_error_dialog_info"
				android:textColor="@color/white" 				
				android:layout_gravity="center"
				/>
	</LinearLayout>	
	<LinearLayout android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="15dip"
		android:id="@+id/win_content_nextstep">
			<TextView  android:id="@+id/error_handler" 
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content"
				android:ellipsize="start"
				android:singleLine="true"
				android:textSize="@dimen/default_text_size_middle"
				android:textColor="@color/white"				
				android:layout_gravity="center"
				/>
	</LinearLayout>	
 
	<LinearLayout android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:layout_marginTop="30dip"
		android:padding="5dip"
		android:id="@+id/lt_btn">
			<Button android:layout_width="350dip" 
				android:layout_height="wrap_content"
				android:text="@string/video_error_dialog_ok"
				android:textSize="@dimen/default_text_size_middle"
				android:textColor="@color/white"
				android:id="@+id/btn_ok"/>
	</LinearLayout>	
</LinearLayout>

